--- a/app/views/public/demande_cabine_mailer/notification_admin.html.erb
+++ b/app/views/public/demande_cabine_mailer/notification_admin.html.erb
@@ -19,6 +19,28 @@
     <p>Commentaires : <%= @demande.commentaires %></p>
   <% end %>
 
+  <% if @demande.respond_to?(:disponibilites) && @demande.disponibilites.present? %>
+    <h4 style="margin-top: 16px;">Disponibilités proposées</h4>
+    <ul style="margin: 8px 0; padding-left: 18px;">
+      <% @demande.disponibilites.each do |slot| %>
+        <% jour_slug, creneau_slug = slot.to_s.split("_", 2) %>
+        <% jour_label = {
+          "mardi" => "Mardi",
+          "mercredi" => "Mercredi",
+          "jeudi" => "Jeudi",
+          "vendredi" => "Vendredi",
+          "samedi" => "Samedi"
+        }[jour_slug] || jour_slug.to_s.humanize %>
+        <% creneau_label = {
+          "matin" => "Matin",
+          "apres_midi" => "Après-midi",
+          "fin_de_journee" => "Fin de journée"
+        }[creneau_slug] || creneau_slug.to_s.humanize %>
+        <li><strong><%= jour_label %></strong> — <%= creneau_label %></li>
+      <% end %>
+    </ul>
+  <% end %>
+
   <%# Produits demandés %>
   <% if @demande.respond_to?(:demande_cabine_essayage_items) && @demande.demande_cabine_essayage_items.any? %>
     <h4 style="margin-top: 16px;">Produits demandés</h4>
