--- a/app/views/public/pages/produits.html.erb
+++ b/app/views/public/pages/produits.html.erb
@@ -38,7 +38,7 @@
     <%= render  "produits_filtres" %>
 
     <!-- Bouton flottant pour accéder au formulaire -->
-    <% if @cabine_cart.any? %>
+    <% if params[:from_cabine].present? && @cabine_cart.any? %>
         <%= render partial: "public/pages/floating_reservation_button" %>
     <% else %>
         <div id="floating_reservation_btn"></div>
