fix notif flash add remove product from cart cabine - get consistent elements in cart cabine

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -68,7 +68,7 @@
     <%= render "public/shared/navbar" %>
 
     <div class="m-0 p-0 public-content">
-      <div id="flash">
+      <div id="flash" data-turbo-temporary>
         <%= render partial: "public/pages/flash" %>
       </div>
       <%= yield %>
