--- a/app/views/public/pages/_floating_reservation_button.html.erb
+++ b/app/views/public/pages/_floating_reservation_button.html.erb
@@ -1,6 +1,7 @@
 <div id="floating_reservation_btn">
-  <%= link_to "#{cabine_essayage_path}?open_form=true#reservationForm", 
+  <%= link_to "#{cabine_essayage_path(open_form: true, from_cabine: true)}#reservationForm", 
       class: "btn btn-lg shadow-lg position-fixed start-50 translate-middle-x",
+      data: { turbo_frame: "_top" },
       style: "bottom: 20px; z-index: 1050; 
               background: var(--public-brand-gradient); 
               border: none; 
