--- a/app/views/public/pages/_produits_filtres.html.erb
+++ b/app/views/public/pages/_produits_filtres.html.erb
@@ -8,8 +8,13 @@
   <div class="container-fluid mt-4 m-0">
 
     <%= turbo_frame_tag :results, data: {turbo_action: 'advance'} do %>
-      <div id="produits" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 m-0 justify-content-center"></div>
+      <div id="produits" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-2 m-0 justify-content-center">
+        <%# Render first page directly server-side %>
+        <%= render partial: "public/pages/produit", collection: @produits %>
+      </div>
 
+      <%# Only load next pages lazily if there are more %>
+      <% if @pagy.next.present? %>
         <%= turbo_frame_tag :pagination, loading: :lazy,
             src: if is_single_category
               produits_path(
@@ -20,6 +25,7 @@
                 prixmax: params[:prixmax],
                 type: params[:type],
                 format: :turbo_stream, 
+                page: @pagy.next,
                 subdomain: "shop",
                 from_cabine: params[:from_cabine])
             else
@@ -29,13 +35,15 @@
                 couleur: params[:couleur],
                 prixmax: params[:prixmax],
                 type: params[:type],
-                format: :turbo_stream, 
+                format: :turbo_stream,
+                page: @pagy.next, 
                 q: params[:q]&.to_unsafe_h,
                 subdomain: "shop",
                 from_cabine: params[:from_cabine])
             end %>
-
+        <% end %>
       <% end %>
+
   </div>
 
 
