--- a/app/views/public/pages/nos_collections.html.erb
+++ b/app/views/public/pages/nos_collections.html.erb
@@ -8,7 +8,8 @@
         <%= collection_card(
           title: "Robes de mariée",
           items: ["Courtes", "Longues"],
-          url: produits_filter_url(category_names: ["robes de mariée courtes", "robes de mariée longues"])
+          url: produits_filter_url(category_names: ["robes de mariée courtes", "robes de mariée longues"]),
+          image: "cat_robes_mariees.jpg"
         ) %>
       </div>
 
@@ -16,7 +17,8 @@
         <%= collection_card(
           title: "Tenues de Soirée",
           items: ["Longues", "Courtes", "Ensembles pantalon", "Combinaisons"],
-          url: produits_filter_url(category_names: ["robes courtes", "robes longues", "ensembles pantalons"])
+          url: produits_filter_url(category_names: ["robes courtes", "robes longues", "ensembles pantalons"]),
+          image: "cat_tenues_soiree.jpg"
         ) %>
       </div>
 
@@ -24,7 +26,8 @@
         <%= collection_card(
           title: "Costumes",
           items: ["Smokings", "Cérémonies", "Enfant"],
-          url: produits_filter_url(category_names: "costume")
+          url: produits_filter_url(category_names: "costume"),
+          image: "cat_costume.jpg"
         ) %>
       </div>
 
@@ -32,7 +35,8 @@
         <%= collection_card(
           title: "Accessoires",
           items: ["Chaussures Homme", "Chaussures Femmes", "Accessoires Hommes", "Accessoires Femmes"],
-          url: produits_filter_url(category_names: ["chaussures", "accessoires"])
+          url: produits_filter_url(category_names: ["chaussures", "accessoires"]),
+          image: "cat_accessoires.jpg"
         ) %>
       </div>
 
