--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -2,10 +2,10 @@
 <nav class="navbar navbar-expand-xl navbar-dark shadow-sm sticky-top">
   <div class="container align-items-center justify-content-between">
     <div class="d-flex align-items-center gap-2">
-      <%= link_to image_tag('/images/a1soir_logo_white.png', class: 'navbar-brand mb-0', width: "180", alt: "Logo"), root_url %>
+      <%= link_to image_tag('/images/a1soir_logo_white.png', class: 'navbar-brand mb-0', width: "250", alt: "Logo"), root_url %>
 
       <%= link_to rdv_url(subdomain: "shop"),
-          class: "btn btn-sm btn-smoke-hover text-light px-2 shadow d-inline-flex align-items-center public-brand-color hover-lift" do %>
+          class: "btn btn-sm btn-smoke-hover text-light px-2 shadow d-inline-flex align-items-center hover-lift" do %>
         <i class="bi bi-calendar-check me-2"></i>
         <span class="fw-bold text-uppercase small">RDV</span>
       <% end %>
