--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -74,7 +74,11 @@
       <%= yield %>
     </div>
     
-      <%= render "public/chat/conversation" %>
+      <%# chatbot %>
+      <%#= render "public/chat/conversation" %>
+    <div class="floating-contact-icons">
+      <%= render "public/shared/floating_contact_icons" %>
+    </div>
 
     <footer>
       <%= render "public/shared/footer" %>
