--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-xl navbar-dark shadow-sm sticky-top">
+<nav class="navbar navbar-expand-xxl navbar-dark shadow-sm sticky-top">
   <div class="container align-items-center justify-content-between">
     <div class="d-flex align-items-center gap-2">
       <%= link_to image_tag('/images/a1soir_logo_white.png', class: 'navbar-brand mb-0', width: "250", alt: "Logo"), root_url %>
