--- a/app/views/public/pages/nos_collections.html.erb
+++ b/app/views/public/pages/nos_collections.html.erb
@@ -1,10 +1,10 @@
 <%= page_header("Nos collections", "Découvrez notre sélection de tenues d'exception") %>
 
 <div class="public-main-content">
-  <div class="container-fluid">
-    <div class="row g-4 my-4">
+  <div class="container-fluid p-0">
+    <div class="row g-0">
       
-      <div class="col-12 col-lg-6" data-scroll-reveal>
+      <div class="col-12 col-md-6 col-lg-3" data-scroll-reveal>
         <%= collection_card(
           title: "Robes de mariée",
           items: ["Courtes", "Longues"],
@@ -13,7 +13,7 @@
         ) %>
       </div>
 
-      <div class="col-12 col-lg-6" data-scroll-reveal>
+      <div class="col-12 col-md-6 col-lg-3" data-scroll-reveal>
         <%= collection_card(
           title: "Tenues de Soirée",
           items: ["Longues", "Courtes", "Ensembles pantalon", "Combinaisons"],
@@ -22,7 +22,7 @@
         ) %>
       </div>
 
-      <div class="col-12 col-lg-6" data-scroll-reveal>
+      <div class="col-12 col-md-6 col-lg-3" data-scroll-reveal>
         <%= collection_card(
           title: "Costumes",
           items: ["Smokings", "Cérémonies", "Enfant"],
@@ -31,7 +31,7 @@
         ) %>
       </div>
 
-      <div class="col-12 col-lg-6" data-scroll-reveal>
+      <div class="col-12 col-md-6 col-lg-3" data-scroll-reveal>
         <%= collection_card(
           title: "Accessoires",
           items: ["Chaussures Homme", "Chaussures Femmes", "Accessoires Hommes", "Accessoires Femmes"],
